修改了超管的首页

--- a/index-super.html
+++ b/index-super.html
@@ -20,103 +20,127 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li><a href="#">首页</a></li>
-          <li><a href="#">首页</a></li>
-          <li><a href="#">首页</a></li>
-          <li><a href="#">首页</a></li>
-          <li><a href="#">首页</a></li>
+          <li class="active"><a href="#">首页</a></li>
+          <li><a href="#">我的任务</a></li>
+          <li><a href="#">在校学生信息</a></li>
+          <li><a href="#">家庭经济信息</a></li>
+          <li><a href="#">没有了</a></li>
         </ul>
-        <ul class="nav navbar-nav pull-right">
+        <ul class="nav navbar-nav navbar-right">
           <li><a href="#">帮助说明</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <form class="imformation container">
-      <div class="imfo-message panel panel-success">
+
+  <form class="imformation container .clearfix">
+    <div class="imfo-left-nav pull-left">
+      <ul class="nav nav-pills">
+        <div class="title text-center">超级管理员界面</div>
+        <li class="block text-center active"><a href="#">已发布任务</a></li>
+        <li class="block text-center"><a href="#">发布新消息</a></li>
+        <li class="block text-center"><a href="#">各系考勤</a></li>
+      </ul>
+    </div>
+    <div class="imfo-message panel panel-default pull-right">
+      <div class="past-message">
         <div class="panel-heading">
-          <label class="imfo-left"><h3>通知</h3></label>
-          <label class="imfo-right pull-right"><h3>已阅</h3></label>
+          <label class="imfo-left"><h3>已发布消息</h3></label>
+          <label class="imfo-right pull-right"><h3>进度</h3></label>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-warning">未确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-success">已确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-success">已确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-success">已确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-success">已确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-success">已确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
         </div>
         <div class="imfo-item panel-body">
-            <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
-            <span class="pull-right">
-              <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-              <button class="btn btn-success">已确认</button>
-            </span>
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
           </div>
+        </div>
+        <div class="page">
+          <ul class="pagination">
+            <li><a href="#" >上一页</a></li>
+            <li class="disabled"><a href="#">1/25</a></li>
+            <li><a href="#">下一页</a></li>
+          </ul>
         </div>
       </div>
-      <div class="page ">
-        <ul class="pagination">
-          <li><a href="#" >上一页</a></li>
-          <li><a href="#">1/25</a></li>
-          <li><a href="#">下一页</a></li>
-        </ul>
+      <div class="publish-imformation hide">
+        <div class="pub-heading">
+          <label>标题</label>
+          <input type="text" name="" value="">
+          <label>发布者</label>
+          <input type="text" name="" value="">
+          <label>完成时间</label>
+          <input type="text" name="" value="">
+        </div>
+        <div class="pub-content">
+          <textarea name="name" rows="8" cols="80"></textarea>
+        </div>
       </div>
+    </div>
   </form>
 
   <div id="messageModal" class="modal fade" aria-hidden="true" data-backdrop="static" aria-labelledby="messageLabel">
