分离了超级管理员和普通管理员的界面，增加了在校学生信息界面

--- a/index-general.html
+++ b/index-general.html
@@ -20,8 +20,8 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index-super.html">首页</a></li>
-          <li><a href="mission-super.html">任务通知</a></li>
+          <li class="active"><a href="index-general.html">首页</a></li>
+          <li><a href="mission-general.html">任务通知</a></li>
           <li><a href="student-information.html">在校学生信息</a></li>
           <li><a href="family-information.html">家庭经济信息</a></li>
           <li><a href="#">没有了</a></li>
@@ -35,7 +35,7 @@
 
 
   <div class="container">
-    <h1>超级管理员首页</h1>
+    <h1>普通管理员首页</h1>
   </div>
 
 
