--- a/login.html
+++ b/login.html
@@ -37,7 +37,10 @@
           </label>
           <span class="form-group"><input type="password" class="form-control" placeholder="输入验证码"></span>
         </div>
-        <div class="signupbtn"><button type="button" class="btn btn-primary btn-lg">登录</button></div>
+        <div class="signupbtn">
+          <button type="submit" class="signupbtn-s btn btn-primary btn-lg">登录(super)</button>
+          <button type="submit" class="signupbtn-g btn btn-primary btn-lg">登录(general)</button>
+        </div>
       </div>
     </form>
   </div>
