--- a/family-information-super.html
+++ b/family-information-super.html
@@ -16,21 +16,21 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <div class="navbar-brand">
-          <a href="index.html">某某系统</a>
+          <a href="index-super.html">某某系统</a>
         </div>
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li><a href="notice.html">通知</a></li>
-          <li><a href="mission.html">任务列表</a></li>
-          <li class="active"><a href="student-information.html">学生基础信息</a></li>
-          <li><a href="family-information.html">家庭经济信息</a></li>
-          <li><a href="loan-information.html">贷款信息</a></li>
-          <li><a href="award-information.html">获奖情况</a></li>
-          <li><a href="import-data.html">导入资料</a></li>
+          <li><a href="notice-super.html">通知</a></li>
+          <li><a href="mission-super.html">任务列表</a></li>
+          <li><a href="student-information-super.html">学生基础信息</a></li>
+          <li class="active"><a href="family-information-super.html">家庭经济信息</a></li>
+          <li><a href="loan-information-super.html">贷款信息</a></li>
+          <li><a href="award-information-super.html">获奖情况</a></li>
+          <li><a href="import-data-super.html">导入资料</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="help.html">帮助说明</a></li>
+          <li><a href="help-super.html">帮助说明</a></li>
         </ul>
       </div>
     </div>
@@ -40,7 +40,7 @@
   <div class="container information container-height">
     <div class="query">
       <div class="col-sm-2">
-        <h2 class="text-center">学生基础信息查询</h2>
+        <h2 class="text-center">家庭经济信息查询</h2>
       </div>
       <form class="form-inline col-sm-10 text-center">
         <div class="input form-group form-inline" role="form">
