--- a/help-super.html
+++ b/help-super.html
@@ -22,11 +22,11 @@
         <ul class="nav navbar-nav">
           <li><a href="notice-super.html">通知</a></li>
           <li><a href="mission-super.html">任务列表</a></li>
-          <li><a href="student-information.html">学生基础信息</a></li>
-          <li><a href="family-information.html">家庭经济信息</a></li>
-          <li><a href="loan-information.html">贷款信息</a></li>
-          <li><a href="award-information.html">获奖情况</a></li>
-          <li><a href="import-data.html">导入资料</a></li>
+          <li><a href="student-information-super.html">学生基础信息</a></li>
+          <li><a href="family-information-super.html">家庭经济信息</a></li>
+          <li><a href="loan-information-super.html">贷款信息</a></li>
+          <li><a href="award-information-super.html">获奖情况</a></li>
+          <li><a href="import-data-super.html">导入资料</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="help-super.html">帮助说明</a></li>
@@ -37,7 +37,7 @@
 
 
   <div class="container">
-    <h1>超级管理员通知</h1>
+    <img src="" alt="">
   </div>
 
 
