--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <div class="navbar-brand">
-          <a href="index-super.html">某某系统</a>
+          <a href="index.html">某某系统</a>
         </div>
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index-general.html">首页</a></li>
-          <li><a href="mission-general.html">任务通知</a></li>
-          <li><a href="student-information.html">在校学生信息</a></li>
+          <li><a href="notice.html">通知</a></li>
+          <li><a href="mission.html">任务列表</a></li>
+          <li><a href="student-information.html">学生基础信息</a></li>
           <li><a href="family-information.html">家庭经济信息</a></li>
-          <li><a href="#">没有了</a></li>
+          <li><a href="loan-information.html">贷款信息</a></li>
+          <li><a href="award-information.html">获奖情况</a></li>
+          <li><a href="import-data.html">导入资料</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">帮助说明</a></li>
+          <li><a href="help.html">帮助说明</a></li>
         </ul>
       </div>
     </div>
@@ -35,7 +37,7 @@
 
 
   <div class="container">
-    <h1>普通管理员首页</h1>
+    <h1>普通管理员通知</h1>
   </div>
 
 
