--- a/loan-information.html
+++ b/loan-information.html
@@ -23,9 +23,9 @@
         <ul class="nav navbar-nav">
           <li><a href="notice.html">通知</a></li>
           <li><a href="mission.html">任务列表</a></li>
-          <li class="active"><a href="student-information.html">学生基础信息</a></li>
+          <li><a href="student-information.html">学生基础信息</a></li>
           <li><a href="family-information.html">家庭经济信息</a></li>
-          <li><a href="loan-information.html">贷款信息</a></li>
+          <li class="active"><a href="loan-information.html">贷款信息</a></li>
           <li><a href="award-information.html">获奖情况</a></li>
           <li><a href="import-data.html">导入资料</a></li>
         </ul>
@@ -40,7 +40,7 @@
   <div class="container information container-height">
     <div class="query">
       <div class="col-sm-2">
-        <h2 class="text-center">学生基础信息查询</h2>
+        <h2 class="text-center">贷款信息查询</h2>
       </div>
       <form class="form-inline col-sm-10 text-center">
         <div class="input form-group form-inline" role="form">
