--- a/notice-super.html
+++ b/notice-super.html
@@ -16,21 +16,21 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <div class="navbar-brand">
-          <a href="index.html">某某系统</a>
+          <a href="index-super.html">某某系统</a>
         </div>
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">通知</a></li>
-          <li><a href="mission.html">任务列表</a></li>
-          <li><a href="student-information.html">学生基础信息</a></li>
-          <li><a href="family-information.html">家庭经济信息</a></li>
-          <li><a href="loan-information.html">贷款信息</a></li>
-          <li><a href="award-information.html">获奖情况</a></li>
-          <li><a href="import-data.html">导入资料</a></li>
+          <li class="active"><a href="notice-super.html">通知</a></li>
+          <li><a href="mission-super.html">任务列表</a></li>
+          <li><a href="student-information-super.html">学生基础信息</a></li>
+          <li><a href="family-information-super.html">家庭经济信息</a></li>
+          <li><a href="loan-information-super.html">贷款信息</a></li>
+          <li><a href="award-information-super.html">获奖情况</a></li><li>
+            <a href="import-data-super.html">导入资料</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="help.html">帮助说明</a></li>
+          <li><a href="help-super.html">帮助说明</a></li>
         </ul>
       </div>
     </div>
@@ -38,26 +38,19 @@
 
 
   <form class="information container .clearfix">
-    <!-- <div class="info-left-nav pull-left">
-      <ul class="nav nav-pills">
-        <div class="title text-center">普通管理员</div>
-        <li class="block text-center"><a href="#">新任务</a></li>
-        <li class="block text-center"><a href="#">目前任务</a></li>
-        <li class="block text-center"><a href="#">已完成任务</a></li>
-      </ul>
-    </div> -->
+    <div class="info-left-nav">
+    </div>
     <div class="info-message panel panel-default">
       <div class="past-message">
         <div class="panel-heading">
-          <label class="info-left"><h3>新通知</h3></label>
-          <label class="info-right pull-right"><h3>已阅</h3></label>
+          <label class="info-left"><h3>已发布消息</h3></label>
+          <label class="info-right pull-right"><h3>进度</h3></label>
         </div>
         <div class="info-item panel-body">
           <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
           <span class="pull-right">
             <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-            <!-- <input id="getmiss" class="btn btn-warning" type="button" value="接收"> -->
-            <input id="getmiss" type="checkbox">
+            <button class="btn btn-default">9/11</button>
           </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
@@ -67,8 +60,57 @@
           <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
           <span class="pull-right">
             <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
-            <!-- <input id="getmiss" class="btn btn-warning" type="button" value="接收"> -->
-            <input id="getmiss" type="checkbox">
+            <button class="btn btn-default">9/11</button>
+          </span>
+          <div class="text-muted small">
+            发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
+          </div>
+        </div>
+        <div class="info-item panel-body">
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
+          <div class="text-muted small">
+            发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
+          </div>
+        </div>
+        <div class="info-item panel-body">
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
+          <div class="text-muted small">
+            发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
+          </div>
+        </div>
+        <div class="info-item panel-body">
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
+          <div class="text-muted small">
+            发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
+          </div>
+        </div>
+        <div class="info-item panel-body">
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
+          </span>
+          <div class="text-muted small">
+            发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
+          </div>
+        </div>
+        <div class="info-item panel-body">
+          <a href="#" data-toggle="modal" data-target="#messageModal">这是一条信息标题</a>
+          <span class="pull-right">
+            <!-- <input type="checkbox" class="checkbox" name="read" value="readed"> -->
+            <button class="btn btn-default">9/11</button>
           </span>
           <div class="text-muted small">
             发布时间：2018/11/16 &nbsp||&nbsp 截止日期：2018/11/18
@@ -82,6 +124,20 @@
           </ul>
         </div>
       </div>
+      <div class="publish-information hide">
+        <div class="pub-heading">
+          <label>标题</label>
+          <input type="text" name="" value="">
+          <label>发布者</label>
+          <input type="text" name="" value="">
+          <label>完成时间</label>
+          <input type="text" name="" value="">
+        </div>
+        <div class="pub-content">
+          <textarea name="name" rows="8" cols="80"></textarea>
+        </div>
+      </div>
+    </div>
   </form>
 
   <div id="messageModal" class="modal fade" aria-hidden="true" data-backdrop="static" aria-labelledby="messageLabel">
@@ -110,6 +166,5 @@
   <script src="js/bootstrap.js" charset="utf-8"></script>
   <script src="js/vuejs-2.5.17.js" charset="utf-8"></script>
   <script src="js/nav.js" charset="utf-8"></script>
-  <script src="js/mission.js" charset="utf-8"></script>
 </body>
 </html>
